--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.3"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
