--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm start",
+  "installCommand": "npm install",
   "builds": [
     {
       "src": "*.js",
@@ -8,7 +10,7 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "/index.js",
       "methods": ["POST", "GET", "PUT", "PATCH", "DELETE"]
     }
