--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "npm start",
-  "installCommand": "npm install",
   "builds": [
     {
       "src": "*.js",
@@ -10,9 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/.*",
-      "dest": "/index.js",
-      "methods": ["POST", "GET", "PUT", "PATCH", "DELETE"]
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
