--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "material-ui-dropzone": "^3.5.0",
     "react": "^18.2.0",
